[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "supplychain-env"
version = "1.0.0"
description = "A real-world supply chain inventory management OpenEnv environment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["openenv", "reinforcement-learning", "supply-chain", "inventory"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai>=1.0.0,<2.0.0",
    "numpy==1.26.4",
    "faker==25.2.0",
    "pyyaml==6.0.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "torch",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Oggyis1/supplychain-env"
Repository = "https://github.com/YOUR_USERNAME/supplychain-env"

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "pytorch*"]

[tool.openenv]
name = "supplychain-env"
version = "1.0.0"
tasks = ["task_easy", "task_medium", "task_hard"]
reset_endpoint = "/reset/{task_id}"
step_endpoint = "/step/{task_id}"
state_endpoint = "/state/{task_id}"
health_endpoint = "/health"